--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <description>综合测试</description>
     <modules>
         <module>test-common</module>
+        <module>test-vue</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -32,6 +33,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
